First step toward replacing Janino with FreeMarker templating engine